--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,14 +21,19 @@ a {
 #centerGuess{
   width:25%;
   margin:auto;
+
   display: block;
   text-align: center;
   color:white;
 
 }
-
+#goButton{
+width:10%;
+margin-top:30px;
+}
 .guessInput{
   padding-top:20px;
+  margin:auto;
 }
 #numHold{
   font-size:8px;
@@ -38,5 +43,24 @@ a {
   width:25%;
   margin:auto;
   display: block;
+  text-align: center; 
+  color:white;
+}
+
+#mainRow{
+  padding-top:10px;
+  width:100%;
+  margin:auto;
   text-align: center;
+}
+
+.centered-container {
+  display: flex;
+  justify-content: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-start;
+  margin-left:-5px; /* Adjust this value to control the distance between the input and button */
 }
