--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ a {
 
   display: block;
   text-align: center;
-  color:white;
+  color:black;
 
 }
 #goButton{
@@ -44,7 +44,7 @@ margin-top:30px;
   margin:auto;
   display: block;
   text-align: center; 
-  color:white;
+  color:black;
 }
 
 #mainRow{
